syntax = "proto3";

package imageverifier;

message VerifyImageRequest {
  bytes image_byte_array = 1;
  string template = 2;
}

message  VerifyImageResponse {
  bytes image_byte_array = 1;
  
  string error = 2;
}

service ImageVerifier {
  rpc VerifyImage(VerifyImageRequest) returns (VerifyImageResponse);
}